--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -7,7 +7,6 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
-    margin-right: 15px;
   }
 
   .filter-div {
@@ -15,32 +14,100 @@
 
     input {
       height: 30px;
-      width: 500px;
+      width: 550px;
+      background-color: #e5e9ea;
+      border-radius: 5px;
+      border: solid 1px #31657e;
+      color: #31657e;
+      padding: 0 10px;
     }
 
     button {
+      cursor: pointer;
       margin-left: 30px;
       width: 100px;
+      background-color: #002233;
+      color: white;
+      border-radius: 5px;
+      border: none;
+
+      &:hover {
+        background-color: black;
+      }
+    }
+  }
+
+  .sort {
+    display: flex;
+    align-items: center;
+    color: #31657e;
+
+    p {
+      margin: 0 20px 0 0;
+      font-weight: bold;
+    }
+
+    select {
+      cursor: pointer;
+      height: 30px;
+      border-radius: 5px;
+      border: solid 1px #002233;
+      width: 150px;
+      padding-left: 15px;
+      color: #31657e;
+      font-weight: bold;
+
+      &:hover {
+        background-color: #002233;
+        color: white;
+      }
     }
   }
 
   .offer-list {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
   }
 
   .card {
     height: 500px;
-    float: left;
     margin-bottom: 25px;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
 
+  .card-img-top {
+    width: 100%;
+    height: 45%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    object-fit: cover;
+  }
+
   .card-body {
-    height: 200px;
+    height: 55%;
+
+    .card-upper {
+      border-bottom: solid 5px #d6e0e4;
+      height: 60%;
+      position: relative;
+    }
+
+    .card-down {
+      height: 40%;
+      padding: 20px;
+    }
+  }
+
+  ::-webkit-scrollbar {
+    width: 1;
+    background: transparent;
+  }
+
+  .upper-inside {
     padding: 20px;
-    position: relative;
+    height: 100%;
 
     h3 {
       margin-top: 0;
@@ -51,6 +118,8 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: flex-start;
+      max-height: 30%;
+      overflow-y: scroll;
     }
 
     .card-tag {
@@ -61,32 +130,26 @@
       margin: 0 10px 10px 0;
     }
 
-    .offer-text {
-      position: absolute;
+    .location-div {
       display: flex;
-      align-items: center;
-      color: #31657e;
-      width: 92%;
+      justify-content: space-between;
+      position: absolute;
       bottom: 0;
-
-      h4 {
-        font-size: 16px;
-      }
-
-      p {
-        position: absolute;
-        right: 0;
-        font-size: 24px;
-      }
+      width: calc(100% - 40px);
     }
   }
 
-  .card-img-top {
-    width: 100%;
-    height: 250px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    object-fit: cover;
+  .ask-price,
+  .current-offer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: calc(50% - 20px);
+    color: #31657e;
+
+    .price {
+      font-size: 24px;
+    }
   }
 
   .hidden {
